--- a/src/chatstyle.css
+++ b/src/chatstyle.css
@@ -1,130 +1,143 @@
-
-
-/* login page */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+/* App  */
+ .cont {
+    background-color: #ece5dd;
+    max-height: 100%;
+    padding: 20px;
+} 
 
-.login_title{
+/* Login  */
+
+.login_title {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 10;
+    margin: 10px;
 }
 
-.login_icon{
-    margin-right: 10;
-    color: aqua;
+.login_icon {
+    margin-right: 10px;
+    color: rgb(4, 170, 170);
+    font-size: 30px;
 }
-.login_form{
+
+.login_form {
     display: flex;
     justify-content: center;
+}
 
-}
-.login_form input{
+.login_form input {
     margin: 10;
-    height: 38px;
-    width: 35%;
+    height: 50px;
+    width: 25%;
     border-radius: 10px;
-    border-color: rgb(9, 61, 61);
-    background-color: #fff;
-    font-size: 15;
+    border-width: 5px;
+    border-color: rgb(4, 170, 170);
+    font-size: 15px;
     padding-inline: 10px;
-    margin: 20px;
+    margin-right: 20px;
 }
-.login_form button{
+
+.login_form button {
     width: 10%;
-    height:38px ;
+    height: 50px;
     font-weight: bold;
     border-radius: 10px;
-    font-size: 18;
-    background-color: rgb(25, 173, 173);
+    font-size: 18px;
+    background-color: #075e54;
     border-width: 0;
-    color: aliceblue;
-    margin: 20px;
-
+    color: #fff;
+    margin: 10px,
 }
 
-/*  chat container page */
-.chat_container{
-    background-color: antiquewhite; 
-    max-height: 100%;
-    padding: 20px;
-
-}
-.chats_header{
+/* Chat Container  */
+.chats_header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
 }
 
-/* chatlist */
-.chats_list{
+.chats_icon {
+    color: red;
+}
+
+.chats_logout {
+    color: rgb(6, 152, 152);
+}
+
+
+.home {
+    padding: 0 10%;
+}
+/* chats list  */
+.chats_list {
     height: 75vh;
     overflow: scroll;
-     overflow-x:hidden ; 
+    overflow-x: hidden;
 }
-.chat_sender{
+.chat_sender {
     display: flex;
     justify-content: flex-end;
-    flex-direction: row;
-
+    flex-direction: row
 }
+
 .chat_sender img,
-.chat_receiver img{
-    width: 50px;
-    height: 50px;
-    border-radius: 100px;
-
+.chat_receiver img {
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
 }
 
-.chat_sender p{
+.chat_sender p {
     padding: 10px;
-    background-color: rgb(93, 156, 211);
+    background-color: #d2cae9;
     border-radius: 10px;
-    max-width:  60%;
+    max-width: 60%,
 }
 
-.chat_receiver{
+.chat_receiver {
     display: flex;
     justify-content: flex-start;
-    flex-direction: row;
+    flex-direction: row
 }
-.chat_receiver p{
+
+
+.chat_receiver p {
     padding: 10px;
-    background-color: rgb(22, 153, 81);
+    background-color: #aff6be;
     border-radius: 10px;
-    max-width: 60%;
+    max-width: 60%,
 }
 
-/* chatinput-textarea */
+/* input text  */
 
-.inputtext_container{
+.inputtext_container {
     display: flex;
-    justify-content:space-evenly;
-    align-items:last baseline;
-
-
+    justify-content: space-evenly;
+    align-items: center
 }
-.inputtext_container button{
-    width: 50px;
-    height: 30px;
-    font-weight:bolde;
+
+.inputtext_container button {
+    width: 10%;
+    height: 50px;
+    font-weight: bold;
     border-radius: 10px;
     font-size: 18px;
-    background-color: rgb(16, 171, 199);
+    background-color: rgb(4, 170, 170);
     border-width: 0;
     color: #fff;
-
+    cursor: pointer;
 }
-.inputtext_container textarea{
-    width: 500px;
-    height: 40px;
+
+.inputtext_container textarea {
+    width: 60%;
+    height: 50px;
     border-radius: 10px;
     border-width: 0;
     padding: 10px;
-    font-size: 18px;
-    background-color: #fff;
+    font-size: 18px,
 }
