--- a/src/todolist.css
+++ b/src/todolist.css
@@ -2,7 +2,7 @@
     margin: auto;
    width: 30%;
  
-  padding: 55px;
+
   justify-content: space-evenly;
    
     
@@ -14,14 +14,17 @@ h1{
 }
 button{
     background-color: rgb(77, 77, 243);
-    width: 55px;
+   width: 50px;
+    height: 30px;
     gap: 10px;
     border-radius: 5px;
-    margin-left: 10px; 
+    margin-left: 20px; 
 }
 input{
     border-color: blueviolet;
     background-color: rgb(192, 212, 212);
     border-radius: 5px;
-    justify-content: space-around;
+    justify-content: space-around; 
+    height: 30px;
+   
 }
